@startuml market_data
title Market Data — Candle · Ticker

' ── Base ─────────────────────────────────────────────────────
abstract class Base {
    + to_dict() : dict
    + to_json(**kwargs) : str
    + {static} from_dict(data: dict) : Self
    + {static} from_json(json_str: str) : Self
}

' ── Candle ───────────────────────────────────────────────────
class Candle {
    + type : CandleType
    + code : str
    + candle_date_time_utc : datetime
    + candle_date_time_kst : datetime
    + opening_price : Decimal
    + high_price : Decimal
    + low_price : Decimal
    + trade_price : Decimal
    + candle_acc_trade_volume : Decimal
    + candle_acc_trade_price : Decimal
    + timestamp : int
    + stream_type : StreamType
    --
    + is_closed : bool  <<property>>
}

' ── Ticker ───────────────────────────────────────────────────
class Ticker {
    + type : str
    + code : str
    + opening_price : Decimal
    + high_price : Decimal
    + low_price : Decimal
    + trade_price : Decimal
    + prev_closing_price : Decimal
    + change : ChangeDirection
    + change_price : Decimal
    + signed_change_price : Decimal
    + change_rate : Decimal
    + signed_change_rate : Decimal
    + trade_volume : Decimal
    + acc_trade_volume : Decimal
    + acc_trade_volume_24h : Decimal
    + acc_trade_price : Decimal
    + acc_trade_price_24h : Decimal
    + trade_date : datetime
    + trade_time : datetime
    + trade_timestamp : int
    + ask_bid : AskBid
    + acc_ask_volume : Decimal
    + acc_bid_volume : Decimal
    + highest_52_week_price : Decimal | None
    + highest_52_week_date : datetime | None
    + lowest_52_week_price : Decimal | None
    + lowest_52_week_date : datetime | None
    + market_state : MarketState
    + timestamp : int
    + stream_type : StreamType
}

' ── Enums ────────────────────────────────────────────────────
enum CandleType {
    SECOND = "candle.1s"
    MINUTE_1 = "candle.1m"
    MINUTE_3 = "candle.3m"
    MINUTE_5 = "candle.5m"
    MINUTE_10 = "candle.10m"
    MINUTE_15 = "candle.15m"
    HALF_HOUR = "candle.30m"
    HOUR = "candle.60m"
    HOUR_4 = "candle.240m"
}

enum StreamType {
    SNAPSHOT = "SNAPSHOT"
    REALTIME = "REALTIME"
}

enum ChangeDirection {
    RISE = "RISE"
    EVEN = "EVEN"
    FALL = "FALL"
}

enum AskBid {
    ASK = "ASK"
    BID = "BID"
}

enum MarketState {
    PREVIEW = "PREVIEW"
    ACTIVE = "ACTIVE"
    DELISTED = "DELISTED"
}

' ── 관계 ─────────────────────────────────────────────────────
Base <|-- Candle
Base <|-- Ticker

Candle --> CandleType
Candle --> StreamType

Ticker --> ChangeDirection
Ticker --> AskBid
Ticker --> MarketState
Ticker --> StreamType

note right of Candle
  is_closed: candle_date_time_utc + timeframe <= now_utc
  MarketDataFeed 가 on_candle_close 콜백을
  호출할 때 판단 기준이 된다.
end note

note right of Ticker
  업비트 WebSocket type="ticker" 응답.
  trade_price 가 현재가로 사용된다.
end note

@enduml